# concordex

./: .gitignore  LICENSE  Makefile  README.md  comparison.md  pyproject.toml  setup.cfg  setup.py
concordex/: __init__.py  concordex_map.py  concordex_stat.py  main.py  neighborhood.py  nomap_map.py  testing.py  testing_concordex.py  testing_reorient_matrix.py
concordex/neighbors/: __init__.py  _neighborhood.py
concordex/tests/: testing.py  testing_concordex.py  testing_guess_orientation.py  testing_reorient_matrix.py
concordex/tools/: __init__.py  _concordex.py
concordex/utils/: _labels.py
examples/: concordex_py_pbmc_demo.ipynb  concordex_py_starmap_demo.ipynb
nomap/: main.py  nomap_map.py  nomap_trace.py
