[bumpversion]
current_version = 1.1.0
commit = True
tag = False

[metadata]
name = concordex
version = 1.0.2
url = https://github.com/pachterlab/concordex
description = Identification of spatial homogeneous regions with concordex
long_description = file: README.md
long_description_content_type = text/markdown
author = Kayla Jackson, A. Sina Booeshaghi, Angel Galvez-Merchan, Alexandra Kim
maintainer = Kayla Jackson
maintainer_email = kaylajac@caltech.edu
kewyords = SingleCell, Clustering, Spatial, Transcriptomics
license = MIT
classifiers = 
	"Environment :: Console"
	"Intended Audience :: Science/Research"
	"License :: OSI Approved :: MIT License"
	"Operating System :: OS Independent"
	"Programming Language :: Python :: 3.6"
	"Programming Language :: Python :: 3.7"
	"Programming Language :: Python :: 3.8"
	"Programming Language :: Python :: 3.9"
	"Programming Language :: Python :: 3.10"
	"Topic :: Scientific/Engineering :: Bio-Informatics"
	"Topic :: Utilities"

[options]
zip_safe = False
python_requires = >=3.9
packages = find:
install_requires = 
	anndata>=0.8
	numpy>=1.23
	pandas>=1.5
	scikit-learn>=0.24

[bumpversion:file:concordex/__init__.py]

[bumpversion:file:README.md]

[flake8]
exclude = .git,.github,__pycache__,build,dist
statistics = True
max-line-length = 88
extend-ignore = E203,E501
